--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 body {
     background-color: #fff;
-    padding: 50px;
+    padding: 5%;
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #404040;
     font-weight: 400;
@@ -18,11 +18,10 @@ strong {
 
 h2 {
     color: #ffffff;
-    // background: #508ab8;
     background: linear-gradient(90deg,#508ab8 0%, #508ab8 35%, #ffffff 80%);
     padding: 5px;
 }
 
 img {
-    max-width: 200px;
+    max-height: 200px;
   }
