body width tweak

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,7 @@ body {
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #404040;
     font-weight: 400;
+    max-width: 600px;
 }
 
 strong {
